add random article link

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div class="container">
 
         <div class="searchContainer">
+            <a href="https://en.wikipedia.org/wiki/Special:Random" target="_blank">Wikipedia roulette</a>
             <h1>Search Wikipedia</h1>
             <input type="text" id="searchBox" class="form-control" placeholder="article name">
         </div>
